[project]
name = "unique_stock_ticker"
version = "1.1.3"
description = ""
authors = [
    { name = "Martin Fadler", email = "martin.fadler@unique.ch" },
    { name = "Sadique Sheik", email = "sadique@unique.ch" },
    { name = "Fabian Schläpfer", email = "fabian@unique.ch" },
    { name = "Pascal Hauri", email = "pascal@unique.ch" },
]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12,<4"
dependencies = [
    "pydantic>=2.8.2",
    "typing-extensions>=4.9.0",
    "unique-toolkit>=1.50.4",
    "plotly>=5.24.1",
    "numerize>=0.12",
    "pyhumps>=3.8.0",
    "pydantic-settings>=2.0.0",
    "pyopenssl>=25.0.0",
    "unique-six>=0.1.3",
]

[dependency-groups]
dev = []

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
constraint-dependencies = ["lxml>=5.0.0"]

[tool.uv.sources]
unique-sdk = { workspace = true }
unique-toolkit = { workspace = true }
unique-six = { workspace = true }

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_stock_ticker --cov-report=term-missing"
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.deptry]
known_first_party = ["unique_stock_ticker"]
extend_exclude = ["unique_stock_ticker/detection/tests"]
package_module_name_map = {"unique-six" = ["unique_six"]}

[tool.deptry.per_rule_ignores]
DEP002 = ["pyopenssl", "unique-toolkit"]
DEP003 = ["unique_toolkit"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_stock_ticker"]
exclude = ["**/tests/**", "**/test_*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
