[tool.poetry]
name = "unique_deep_research"
version = "3.0.27"
description = "Deep Research Tool for complex research tasks"
authors = [
    "Martin Fadler <martin.fadler@unique.ch>",
    "Sadique Sheik <sadique@unique.ch>",
    "Fabian Schläpfer <fabian@unique.ch>",
    "Pascal Hauri <pascal@unique.ch>",
]
readme = ["README.md", "CHANGELOG.md"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
typing-extensions = "^4.9.0"
unique-toolkit = "^1.38.3"
jinja2 = "^3.1.2"
openai = "^1.99.0"
langgraph = "^1.0.0"
langchain = "^1.1.0"
langchain-core = "^1.0.0"
unique-web-search = "^1.7.0"
httpx = "^0.28.0"
tiktoken = "^0.12.0"
timeout-decorator = "^0.5.0"
beautifulsoup4 = "^4.12.0"
fake-useragent = "^2.0.0"
markdownify = "^0.14.0"


[tool.poetry.group.dev.dependencies]
unique-sdk = { path = "../../unique_sdk" }
unique-toolkit = { path = "../../unique_toolkit" }
unique-web-search = { path = "../unique_web_search" }
pytest = "^8.4.1"
pytest-asyncio = "^0.25.0"
pytest-cov = "^7.0.0"
ruff = "^0.12.10"
deptry = "^0.24.0"
basedpyright = "^1.35.0"
poethepoet = "^0.32.0"
opik = "^1.8.42"
google = "^3.0.0"
google-genai = "^1.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_deep_research --cov-report=term-missing"
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.deptry]
known_first_party = ["unique_deep_research"]
extend_exclude = ["benchmarking", "tests"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_deep_research"]
exclude = ["**/tests/**", "**/test_*.py", "**/benchmarking/**"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
