[project]
name = "unique_deep_research"
version = "3.6.0"
description = "Deep Research Tool for complex research tasks"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "Martin Fadler", email = "martin.fadler@unique.ch" },
    { name = "Sadique Sheik", email = "sadique@unique.ch" },
    { name = "Fabian Schläpfer", email = "fabian@unique.ch" },
    { name = "Pascal Hauri", email = "pascal@unique.ch" },
]
requires-python = ">=3.12,<4"
dependencies = [
    "pydantic>=2.8.2,<3",
    "typing-extensions>=4.9.0,<5",
    "unique_toolkit>=1.48.0,<2",
    "jinja2>=3.1.2,<4",
    "openai>=1.99.0,<3",
    "langgraph>=1.0.0,<2",
    "langchain-core>=1.0.0,<2",
    "unique-web-search>=1.7.0,<2",
    "httpx>=0.28.0,<0.29",
    "timeout-decorator>=0.5.0,<0.6",
    "beautifulsoup4>=4.12.0,<5",
    "fake-useragent>=2.0.0,<3",
    "markdownify>=0.14.0,<0.15",
    "langchain[openai]>=1.1.0,<2",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = []

[tool.uv]
exclude-newer = "2 weeks"

[tool.uv.exclude-newer-package]
"unique-sdk" = false
"unique-toolkit" = false
"unique-web-search" = false

[tool.uv.sources]
unique-sdk = { workspace = true }
unique-toolkit = { workspace = true }
unique-web-search = { workspace = true }

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_deep_research --cov-report=term-missing"
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.deptry]
known_first_party = ["unique_deep_research"]
extend_exclude = ["benchmarking", "tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["unique_toolkit", "unique-web-search"]
DEP003 = ["unique_toolkit"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_deep_research"]
exclude = ["**/tests/**", "**/test_*.py", "**/benchmarking/**"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
