[project]
name = "unique-document-generator"
version = "0.1.0"
description = "Document generator tool that converts markdown to Word (.docx) documents"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "Tin Oroz", email = "tin.oroz@unique.ai" },
]
requires-python = ">=3.12,<4"
dependencies = [
    "pydantic>=2.8.2,<3",
    "typing-extensions>=4.9.0,<5",
    "unique-toolkit>=1.48.0,<2",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
constraint-dependencies = ["lxml>=5.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-cov>=7.0.0,<8",
    "pytest-mock>=3.14.0,<4",
    "pytest-asyncio>=1.2.0,<2",
    "deptry>=0.24.0,<0.25",
    "basedpyright>=1.35.0,<2",
    "poethepoet>=0.32.0,<0.33",
    "ruff>=0.11.7",
]

[tool.uv.sources]
unique-toolkit = { path = "../../unique_toolkit", editable = true }

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_document_generator --cov-report=term-missing"
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.deptry]
known_first_party = ["unique_document_generator", "unique_toolkit"]
extend_exclude = ["tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["unique-toolkit"]
DEP003 = ["unique_toolkit"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_document_generator"]
exclude = ["**/tests/**", "**/test_*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
