[tool.poetry]
name = "unique_internal_search"
version = "1.2.20"
description = ""
authors = [
    "Martin Fadler <martin.fadler@unique.ch>",
    "Sadique Sheik <sadique@unique.ch>",
    "Fabian Schläpfer <fabian@unique.ch>",
    "Pascal Hauri <pascal@unique.ch>",
]
readme = ["README.md", "CHANGELOG.md"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
typing-extensions = "^4.9.0"
unique-toolkit = "^1.42.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
ruff = "^0.12.10"
pytest-cov = "^7.0.0"
deptry = "^0.24.0"
basedpyright = "^1.35.0"
poethepoet = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_internal_search --cov-report=term-missing"
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.deptry]
known_first_party = ["unique_internal_search"]
extend_exclude = ["tests"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_internal_search"]
exclude = ["**/tests/**", "**/test_*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
