[tool.poetry]
name = "unique-swot"
version = "1.2.2"
description = "Unique Swot package is a tool that for conducting a swot analysis based on internal and external documents"
authors = ["Rami Azouz <rami.ext@unique.ch>", "Fabian Schläpfer <fabian.schlaepfer@unique.ai>"]
license = "Proprietary"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
typing-extensions = "^4.9.0"
jinja2 = "^3.1.0"
tqdm = "^4.66.0"
unique-toolkit = "^1.38.1"
unique-quartr = "^0.2.1"
tiktoken = "^0.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
python = "^3.12"
pydantic = "^2.8.2"
pytest = "^8.3.5"
pytest-cov = "^7.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^1.2.0"
deptry = "^0.24.0"
basedpyright = "^1.35.0"
poethepoet = "^0.32.0"
unique-toolkit = { path = "../../unique_toolkit",  develop = true}
unique-quartr = { path = "../../connectors/unique_quartr",  develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_swot --cov-report=term-missing"
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.deptry]
known_first_party = ["unique_swot", "unique_toolkit", "unique_quartr"]
extend_exclude = ["unique_swot/tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["unique-toolkit", "unique-quartr"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_swot"]
exclude = ["**/tests/**", "**/test_*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
