[project]
name = "unique-swot"
version = "1.3.5"
description = "Unique Swot package is a tool that for conducting a swot analysis based on internal and external documents"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "Rami Azouz", email = "rami.ext@unique.ch" },
    { name = "Fabian Schläpfer", email = "fabian.schlaepfer@unique.ai" },
]
requires-python = ">=3.12,<4"
dependencies = [
    "pydantic>=2.8.2,<3",
    "typing-extensions>=4.9.0,<5",
    "jinja2>=3.1.0,<4",
    "tqdm>=4.66.0,<5",
    "unique-toolkit>=2026.18.0.dev0",
    "unique-quartr>=2026.18.0.dev0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
exclude-newer = "2 weeks"
constraint-dependencies = ["lxml>=5.0.0"]

[tool.uv.exclude-newer-package]
"unique-quartr" = false
"unique-toolkit" = false

[dependency-groups]
dev = []

[tool.uv.sources]
unique-toolkit = { workspace = true }
unique-quartr = { workspace = true }

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_swot --cov-report=term-missing"
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.pytest.ini_options]
addopts = "--strict-markers --import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "ai: AI-authored or AI-generated tests",
    "asyncio: asyncio tests",
    "integration: integration tests that require API access or credentials",
    "serial: tests that must run serially",
    "unit: unit tests",
    "verified: AI-generated tests with human verification",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.deptry]
known_first_party = ["unique_swot", "unique_toolkit", "unique_quartr"]
extend_exclude = ["unique_swot/tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["unique-toolkit", "unique-quartr"]
DEP003 = ["unique_toolkit", "unique_quartr"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_swot"]
exclude = ["**/tests/**", "**/test_*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
