[project]
name = "unique_web_search"
version = "1.7.5"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Andreas Hauri", email = "andreas@unique.ch" },
  { name = "Gustav Hartz", email = "gustav.hartz.ext@unique.ch" },
  { name = "Rami Azouz", email = "rami.ext@unique.ch" },
]
license = { text = "Proprietary" }
dependencies = [
  "typing-extensions>=4.14.1,<5",
  "pydantic>=2.12.3,<3",
  "pydantic-settings>=2.10.1,<3",
  "timeout-decorator>=0.5.0,<1",
  "markdownify>=0.14.1,<1",
  "fake-useragent>=2.2.0,<3",
  "crawl4ai>=0.6.3,<1",
  "firecrawl>=3.3.2,<4",
  "tavily-python>=0.7.11,<1",
  "unidecode>=1.4.0,<2",
  "azure-ai-projects>=1.0.0,<2",
  "azure-identity>=1.25.0,<2",
  "unique-toolkit>=1.42.9,<2",
  "azure-core>=1.36.0,<2",
  "google-cloud-aiplatform>=1.128.0,<2",
  "google-auth>=2.43.0,<3",
  "google-generativeai>=0.8.5,<0.9",
  "langchain-text-splitters>=1.0.0,<2",
  "httpx>=0.28.1",
  "tiktoken>=0.12.0",
  "openai>=1.109.1",
  "certifi>=2025.11.12",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "pytest>=8.4.1,<9",
  "pytest-asyncio>=1.2.0,<2",
  "pytest-mock>=3.14.0,<4",
  "ruff>=0.12.10,<0.13",
]

[tool.deptry]
known_first_party = ["unique_web_search"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

