[project]
name = "tutorials"
version = "0.0.2"
description = ""
authors = [{ name = "Cedric Klinkert", email = "cedric@unique.ai" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "unique-toolkit>=0.7.39",
    "pydantic-settings>=2.8.1",
    "aiolimiter>=1.2.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "openai>=1.97.0",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
]

[dependency-groups]
dev = [
    "ruff>=0.5.3",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "2 weeks"

[tool.uv.exclude-newer-package]
"unique-toolkit" = false

