[project]
name = "unique-search-proxy-core"
version = "2026.22.0"
description = "Shared Pydantic types for the Unique Search Proxy API"
authors = [{ name = "ThePhilAz", email = "rami.azouz@philico.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "unique-toolkit>=2026.22.0",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[tool.uv]
exclude-newer = "2 weeks"

[tool.uv.exclude-newer-package]
"unique-toolkit" = false

[tool.uv.sources]
unique-toolkit = { workspace = true }

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_search_proxy_core"]

[tool.deptry]
known_first_party = ["unique_search_proxy_core", "unique_toolkit"]

[tool.deptry.per_rule_ignores]
DEP002 = ["unique-toolkit"]
DEP003 = ["unique_toolkit"]

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
typecheck = "basedpyright"

[tool.pytest.ini_options]
addopts = "--strict-markers --import-mode=importlib"
asyncio_mode = "auto"
