[project]
name = "unique-search-proxy-core"
version = "2026.32.0.dev3"
description = "Shared Pydantic types for the Unique Search Proxy API"
authors = [{ name = "ThePhilAz", email = "rami.azouz@philico.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0,<0.29",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.10.1,<3",
    "pyhumps>=3.8.0,<4",
    "unique-toolkit[monitoring]>=2026.32.0.dev6,<2026.32.0rc0",

]

[dependency-groups]
dev = [
    "basedpyright>=1.39.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[tool.uv]
exclude-newer = "2 weeks"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_search_proxy_core"]

[tool.deptry]
known_first_party = ["unique_search_proxy_core"]

[tool.deptry.per_rule_ignores]
# pydantic_core ships with (and is version-pinned by) pydantic; importing
# CoreSchema from it is the canonical way to type __get_pydantic_core_schema__.
DEP003 = ["pydantic_core"]

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."

[tool.pytest.ini_options]
addopts = "--strict-markers --import-mode=importlib"
asyncio_mode = "auto"

[tool.uv.sources]
unique-toolkit = { workspace = true }
