[project]
name = "unique-search-proxy-sdk"
version = "2026.32.0.dev0"
description = "Async HTTP client for the Unique Search Proxy API"
authors = [{ name = "ThePhilAz", email = "rami.azouz@philico.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=24.3.0,<26",
    "httpx>=0.28.0,<0.29.0",
    "pydantic>=2.12.5,<3.0.0",
    "unique-search-proxy-core>=2026.32.0.dev3,<2026.32.0rc0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "unique-search-proxy>=2026.22.0",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[tool.uv]
exclude-newer = "2 weeks"

[tool.uv.sources]
unique-search-proxy-core = { workspace = true }
unique-search-proxy = { workspace = true }

[tool.ruff]
target-version = "py312"
extend-exclude = ["unique_search_proxy_sdk/_generated"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_search_proxy_sdk"]

[tool.deptry]
known_first_party = [
    "unique_search_proxy_sdk",
    "unique_search_proxy_core",
    "unique_search_proxy_client",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["unique-search-proxy-core"]

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"

[tool.pytest.ini_options]
addopts = "--strict-markers --import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "ai: AI-authored or AI-generated tests",
    "asyncio: asyncio tests",
    "integration: requires unique-search-proxy (FastAPI app) in the environment",
]

[tool.coverage.run]
omit = [
    "unique_search_proxy_sdk/_generated/*",
    "unique_search_proxy_sdk/typing_checks.py",
]
